feat: add header, footer

--- a/index.html
+++ b/index.html
@@ -9,13 +9,35 @@
 </head>
 <body>
     <header class="header">
-
+        <div class="container header-container">
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="#contacts" class="nav-link">Contact</a></li>
+                    <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
+                    <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+                    <li class="nav-item"><a href="#my__skills" class="nav-link">My Skills</a></li>
+                    <li class="nav-item"><a href="#other__skills" class="nav-link">Other Skills</a></li>
+                    <li class="nav-item"><a href="#code" class="nav-link">Code example</a></li>
+                    <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
+                    <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main class="main">
 
     </main>
     <footer class="footer">
-
+        <div class="container footer-container">
+            <a href="https://github.com/safonovlg10/" class="footer-github-link">
+                <img src="./assets/svg/github.svg" alt="github-icon" class="footer-github-icon">
+                My GitHub
+            </a>
+            <p class="footer-copy">&copy; Safonov Vitalik 2024</p>
+            <a href="https://app.rs.school/course/score?course=js-fe-preschool-2024q2" class="footer-github-link">
+                <img src="./assets/svg/rss.svg" alt="rss-icon" class="footer-rss-icon">
+            </a>
+        </div>
     </footer>
 </body>
 </html>
