feat: add section courses, languages, social

--- a/index.html
+++ b/index.html
@@ -43,6 +43,58 @@
                         <li class="section-contacts-item"><a href="" class="section-contacts-link">Russia, Rostov</a></li>
                     </ul>
                 </section>
+                <section class="section-left-conteiner section-courses" id="courses">
+                    <h2 class="section-left-title section-courses-title">Courses</h2>
+                    <ul class="section-courses-list">
+                        <li class="section-courses-item"><a href="" class="section-left-link section-courses-link">JavaScript book</a></li>
+                        <li class="section-courses-item"><a href="" class="section-left-link section-courses-link">WebDev</a></li>
+                        <li class="section-courses-item"><a href="" class="section-left-link section-courses-link">HTML and CSS Tutorials on w3schools</a></li>
+                        <li class="section-courses-item"><a href="" class="section-left-link section-courses-link">RS Schools «JavaScript/Front-end. Stage 0</a></li>
+                    </ul>
+                </section>
+                <section class="section-left-conteiner section-languages" id="languages">
+                    <h2 class="section-left-title section-languages-title">Languages</h2>
+                    <ul class="section-languages-conteiner">
+                        <li class="section-languages-list">
+                            <p class="section-left-subtitle languages-text">English</p>
+                            <div class="section-languages-level">
+                                <div class="section-languages-level__item languages-level__gray"></div>
+                                <div class="section-languages-level__item languages-level__gray"></div>
+                                <div class="section-languages-level__item"></div>
+                                <div class="section-languages-level__item"></div>
+                                <div class="section-languages-level__item"></div>
+                            </div>
+                        </li>
+                        <li class="section-languages-list">
+                            <p class="section-left-subtitle languages-text">Russian</p>
+                            <div class="section-languages-level">
+                                <div class="section-languages-level__item languages-level__gray"></div>
+                                <div class="section-languages-level__item languages-level__gray"></div>
+                                <div class="section-languages-level__item languages-level__gray"></div>
+                                <div class="section-languages-level__item languages-level__gray"></div>
+                                <div class="section-languages-level__item languages-level__gray"></div>
+                            </div>
+                        </li>
+                        <li class="section-languages-list">
+                            <p class="section-left-subtitle languages-text">Ukrainian</p>
+                            <div class="section-languages-level">
+                                <div class="section-languages-level__item languages-level__gray"></div>
+                                <div class="section-languages-level__item languages-level__gray"></div>
+                                <div class="section-languages-level__item languages-level__gray"></div>
+                                <div class="section-languages-level__item"></div>
+                                <div class="section-languages-level__item"></div>
+                            </div>
+                        </li>
+                    </ul>
+                </section>
+                <section class="section-left-conteiner section-social" id="social">
+                    <h2 class="section-left-title section-courses-title">Social</h2>
+                    <ul class="section-courses-list">
+                        <li class="section-social-item"><a href="https://vk.com/id16013344" class="section-left-link section-social-link">Vkontakte</a></li>
+                        <li class="section-social-item"><a href="https://ok.ru/profile/531132102567" class="section-left-link section-social-link">Odnoklassniki</a></li>
+                        <li class="section-social-item"><a href="https://github.com/safonovlg10" class="section-left-link section-social-link">github</a></li>
+                    </ul>
+                </section>
             </div>
             <div class="right-container">
                 <section class="section-right section-summary">
