feat: add library highlight.js, css/a11y-light.css

--- a/index.html
+++ b/index.html
@@ -118,5 +118,7 @@
             </a>
         </div>
     </footer>
+    <script src="scripts/highlight.js"></script>
+    <script>hljs.highlightAll();</script>
 </body>
 </html>
