feat: add section hobbies, education, code, skills

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cv</title>
     <link rel="icon" href="assets/img/favicon.ico">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/a11y-light.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -30,11 +32,12 @@
                 <section class="section-profile">
                     <img src="./assets/img/YfVgvu8Woy0.jpg" alt="profile-logo" class="section-profile-logo">
                     <div class="section-profile-title-container">
-                        <h1 class="section-profile-title-name"><space class="name-first">Vitalik</space></br> Safonov</h1>
+                        <h2 class="name-first">Vitalik</h2>
+                        <h1 class="section-profile-title-name">Safonov</h1>
                         <h3 class="section-subtitle">JUNIOR FRONT-END DEVELOPER</h3>
                     </div>
                 </section>
-                <section class="section-contacts">
+                <div class="section-contacts" id="contacts">
                     <ul class="section-contacts-list">
                         <li class="section-contacts-item"><a href="" class="section-contacts-link">+7 928 768 42 29</a></li>
                         <li class="section-contacts-item"><a href="milto:safonovlg10@gmail.com" class="section-contacts-link">safonovlg10@gmail.com</a></li>
@@ -42,7 +45,7 @@
                         <li class="section-contacts-item"><a href="https://discord.gg/@safonovlg10" class="section-contacts-link">@safonovlg10</a></li>
                         <li class="section-contacts-item"><a href="" class="section-contacts-link">Russia, Rostov</a></li>
                     </ul>
-                </section>
+                </div>
                 <section class="section-left-conteiner section-courses" id="courses">
                     <h2 class="section-left-title section-courses-title">Courses</h2>
                     <ul class="section-courses-list">
@@ -95,13 +98,107 @@
                         <li class="section-social-item"><a href="https://github.com/safonovlg10" class="section-left-link section-social-link">github</a></li>
                     </ul>
                 </section>
+                <section class="section-hobbies-container section-hobbies" id="hobbies">
+                    <h2 class="section-left-title section-hobbies-title">Hobbies</h2>
+                    <div class="hobbies-container">
+                        <div class="miniature-container">
+                            <img src="./assets/svg/icon-reading.svg" alt="reading" class="hobbies-img">
+                            <p class="section-hobbies-text">Reading</p>
+                        </div>
+                        <div class="miniature-container">
+                            <img src="./assets/svg/icon-dance.svg" alt="dance" class="hobbies-img">
+                            <p class="section-hobbies-text">Dance</p>
+                        </div>
+                        <div class="miniature-container">
+                            <img src="./assets/svg/icon-singing.svg" alt="singing" class="hobbies-img">
+                            <p class="section-hobbies-text">Singing</p>
+                        </div>
+                        <div class="miniature-container">
+                            <img src="./assets/svg/icon-football.svg" alt="Football" class="hobbies-img">
+                            <p class="section-hobbies-text">Football</p>
+                        </div>
+                    </div>
+                </section>
             </div>
             <div class="right-container">
-                <section class="section-right section-summary">
+                <section class="section-right section-summary" id="summary">
                     <h2 class="section-right-title">Summary</h2>
-                    <p class="section-subtitle-conteiner section-summary-subtitle">
+                    <p class="section-subtitle-container section-right-text">
                         Hello, I’ll tell you a little about myself. I tried to study on my own, but my learning was not organized, there was no clear plan for what to learn. I recently came across rsschool. I think that they will help you master all the skills of a front-end developer.
                     </p>
+                </section>
+                <section class="section-right section-education" id="education">
+                    <h2 class="section-right-title">EDUCATION</h2>
+                    <div class="section-subtitle-container">
+                        <p class="section-right-subtitle">Electrician of high voltage networks</p>
+                        <p class="section-right-desc">Polytechnic College</p>
+                        <p class="section-right-desc__date">2008-2012, Rostov</p>
+                    </div>
+                </section>
+                <section class="section-right section-code" id="code">
+                    <h2 class="section-right-title">Code example</h2>
+                    <pre class="pre section-subtitle-container">
+                        <code >
+function digital_root(n) {
+     var digits = n.toString().split("").map(Number);
+     var sum = 0;
+     for (var i = 0; i > digits.length; i++) {
+       sum += digits[i];
+     }
+     var sumString = sum.toString();
+     if (sumString.length > 1) {
+        var sumDigits = sumString.split("").map(Number);
+        var firstSumDigit = sumDigits.slice(0);
+        var lastSumDigit = sumDigits.slice(-1);
+        return firstSumDigit[0] + lastSumDigit[0];
+    } else {
+        return sum;
+    }
+}
+                        </code>
+                    </pre>
+                </section>
+                <section class="section-right section-my__skills" id="my__skills">
+                    <h2 class="section-right-title">MY SKILLS</h2>
+                    <div class="skills-container section-subtitle-container">
+                        <div class="skills-container-icon skills-container-my__skills-icon">
+                            <div class="progress-circle" style="--progress: 75%;"></div>
+                            <p class="skills-container-title">HTML 5</p>
+                        </div>
+                        <div class="skills-container-icon skills-container-my__skills-icon">
+                            <div class="progress-circle" style="--progress: 55%;"></div>
+                            <p class="skills-container-title">css 3</p>
+                        </div>
+                        <div class="skills-container-icon skills-container-my__skills-icon">
+                            <div class="progress-circle" style="--progress: 40%;"></div>
+                            <p class="skills-container-title">Javascript</p>
+                        </div>
+                    </div>
+                </section>
+                <section class="section-right section-other__skills" id="other__skills">
+                    <h2 class="section-right-title">OTHER  SKILLS</h2>
+                    <div class="skills-container section-subtitle-container">
+                        <div class="skills-container-icon skills-container-other__skills-icon">
+                            <div class="progress-circle" style="--progress: 75%;"></div>
+                            <p class="skills-container-title">Figma</p>
+                        </div>
+                        <div class="skills-container-icon skills-container-other__skills-icon">
+                            <div class="progress-circle" style="--progress: 55%;"></div>
+                            <p class="skills-container-title">Adobe Photoshop</p>
+                        </div>
+                        <div class="skills-container-icon skills-container-other__skills-icon">
+                            <div class="progress-circle" style="--progress: 40%;"></div>
+                            <p class="skills-container-title">Adobe illustrator</p>
+                        </div>
+                        <div class="skills-container-icon skills-container-other__skills-icon">
+                            <div class="progress-circle" style="--progress: 55%;"></div>
+                            <p class="skills-container-title">Adobe Xd</p>
+                        </div>
+                        <div class="skills-container-icon skills-container-other__skills-icon">
+                            <div class="progress-circle" style="--progress: 35%;"></div>
+                            <p class="skills-container-title">Adobe indesign</p>
+                        </div>
+                    </div>
                 </section>
             </div>
         </div>
