fix: update index file and style file

--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
 function digital_root(n) {
      var digits = n.toString().split("").map(Number);
      var sum = 0;
-     for (var i = 0; i > digits.length; i++) {
+     for (var i = 0; i &gt; digits.length; i++) {
        sum += digits[i];
      }
      var sumString = sum.toString();
-     if (sumString.length > 1) {
+     if (sumString.length &gt; 1) {
         var sumDigits = sumString.split("").map(Number);
         var firstSumDigit = sumDigits.slice(0);
         var lastSumDigit = sumDigits.slice(-1);
@@ -162,15 +162,15 @@ function digital_root(n) {
                     <h2 class="section-right-title">MY SKILLS</h2>
                     <div class="skills-container section-subtitle-container">
                         <div class="skills-container-icon skills-container-my__skills-icon">
-                            <div class="progress-circle" style="--progress: 75%;"></div>
+                            <div class="progress-circle progress75"></div>
                             <p class="skills-container-title">HTML 5</p>
                         </div>
                         <div class="skills-container-icon skills-container-my__skills-icon">
-                            <div class="progress-circle" style="--progress: 55%;"></div>
+                            <div class="progress-circle progress55"></div>
                             <p class="skills-container-title">css 3</p>
                         </div>
                         <div class="skills-container-icon skills-container-my__skills-icon">
-                            <div class="progress-circle" style="--progress: 40%;"></div>
+                            <div class="progress-circle progress40"></div>
                             <p class="skills-container-title">Javascript</p>
                         </div>
                     </div>
@@ -179,23 +179,23 @@ function digital_root(n) {
                     <h2 class="section-right-title">OTHER  SKILLS</h2>
                     <div class="skills-container section-subtitle-container">
                         <div class="skills-container-icon skills-container-other__skills-icon">
-                            <div class="progress-circle" style="--progress: 75%;"></div>
+                            <div class="progress-circle progress75"></div>
                             <p class="skills-container-title">Figma</p>
                         </div>
                         <div class="skills-container-icon skills-container-other__skills-icon">
-                            <div class="progress-circle" style="--progress: 55%;"></div>
+                            <div class="progress-circle progress55"></div>
                             <p class="skills-container-title">Adobe Photoshop</p>
                         </div>
                         <div class="skills-container-icon skills-container-other__skills-icon">
-                            <div class="progress-circle" style="--progress: 40%;"></div>
+                            <div class="progress-circle progress40"></div>
                             <p class="skills-container-title">Adobe illustrator</p>
                         </div>
                         <div class="skills-container-icon skills-container-other__skills-icon">
-                            <div class="progress-circle" style="--progress: 55%;"></div>
+                            <div class="progress-circle progress55"></div>
                             <p class="skills-container-title">Adobe Xd</p>
                         </div>
                         <div class="skills-container-icon skills-container-other__skills-icon">
-                            <div class="progress-circle" style="--progress: 35%;"></div>
+                            <div class="progress-circle progress35"></div>
                             <p class="skills-container-title">Adobe indesign</p>
                         </div>
                     </div>
